fixing issue for the backgound is not showing in media device in main

--- a/styles/style.css
+++ b/styles/style.css
@@ -492,6 +492,16 @@ footer {
     margin: 0;
   }
 
+  main {
+    background: linear-gradient(
+        0deg,
+        rgba(254, 163, 1, 0.3),
+        rgba(255, 255, 255, 0.3)
+      ),
+      url("../assets/bg.png");
+    min-height: 500px;
+    padding: 20px;
+  }
   .title {
     padding-right: 140px;
   }
